tests/Rules/Media/Fixtures/valid/img_with_empty_alt_decorative.html.twig
<img src="decorative.jpg" alt="" role="presentation">
