tests/Rules/Media/Fixtures/invalid/img_dynamic_empty_alt.html.twig
{# 1 errors #}
<html>
  <body>
    <img src="foo.jpg" alt="{{ '' }}">
  </body>
</html>
